--- a/asp_2184587/asp_2184587.csproj
+++ b/asp_2184587/asp_2184587.csproj
@@ -282,6 +282,8 @@
     <Content Include="Views\Provedor\Index.cshtml" />
     <Content Include="Views\Provedor\Edit.cshtml" />
     <Content Include="Views\Provedor\Create.cshtml" />
+    <Content Include="Views\Cliente\Details.cshtml" />
+    <Content Include="Views\Provedor\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
