Inclusion de las tablas producto,producto_compra y compra, adicion de vistas y cambio de encabezados

--- a/asp_2184587/Web.config
+++ b/asp_2184587/Web.config
@@ -77,5 +77,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="inventarioEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=inventario&quot;" providerName="System.Data.EntityClient" />
+    <add name="inventarioEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=inventario&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
