--- a/asp_2184587/asp_2184587.csproj
+++ b/asp_2184587/asp_2184587.csproj
@@ -177,7 +177,10 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
+    <Compile Include="Controllers\CompraController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductoController.cs" />
+    <Compile Include="Controllers\Producto_CompraController.cs" />
     <Compile Include="Controllers\ProvedorController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
@@ -283,6 +286,23 @@
     <Content Include="Views\Provedor\Edit.cshtml" />
     <Content Include="Views\Provedor\Create.cshtml" />
     <Content Include="Views\Cliente\Details.cshtml" />
+    <Content Include="Views\Producto\Index.cshtml" />
+    <Content Include="Views\Producto\Create.cshtml" />
+    <Content Include="Views\Producto\ListarProveedores.cshtml" />
+    <Content Include="Views\Producto\Details.cshtml" />
+    <Content Include="Views\Compra\Index.cshtml" />
+    <Content Include="Views\Compra\Create.cshtml" />
+    <Content Include="Views\Compra\Details.cshtml" />
+    <Content Include="Views\Compra\Edit.cshtml" />
+    <Content Include="Views\Compra\ListarCliente.cshtml" />
+    <Content Include="Views\Producto\Edit.cshtml" />
+    <Content Include="Views\Producto_Compra\Index.cshtml" />
+    <Content Include="Views\Producto_Compra\Create.cshtml" />
+    <Content Include="Views\Producto_Compra\Edit.cshtml" />
+    <Content Include="Views\Producto_Compra\Details.cshtml" />
+    <Content Include="Views\Producto_Compra\ListarCompra.cshtml" />
+    <Content Include="Views\Producto_Compra\ListarProducto.cshtml" />
+    <Content Include="Views\Compra\ListarUsuario.cshtml" />
     <Content Include="Views\Provedor\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
