--- a/asp_2184587/Web.config
+++ b/asp_2184587/Web.config
@@ -14,10 +14,15 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Usuario/Login" timeout="2000"></forms>
+	  </authentication>	  
   </system.web>
+	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
