--- a/asp_2184587/asp_2184587.csproj
+++ b/asp_2184587/asp_2184587.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Models\usuario.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -315,6 +316,8 @@
     <Content Include="Views\Provedor\Details.cshtml" />
     <Content Include="Views\Usuario\Login.cshtml" />
     <Content Include="Views\Producto\Reporte.cshtml" />
+    <Content Include="Views\Provedor\uploadCSV.cshtml" />
+    <Content Include="Uploads\csv.csv" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
